# tengine

./: .gitignore  LICENSE  README.md  build.sh  casino.py  flappy.py  flappy2.py  platformer.py  pyproject.toml  snake.py  tengine.py
examples/: casino.py  flappy.py  snake.py
examples/flappybird/: bird1.ppm  bird2.ppm  flappybird.ppm  flappybird.py  gameover.ppm  pipe_body.ppm  pipe_end.ppm
examples/snake/: snake.py
src/tengine_examples/: casino.py  snake.py
tengine/: __init__.py  color.py  keys.py
tengine/advanced/: sprites.py
tengine/core/: __init__.py  color.py  game.py  geometry.py  input.py  rendering.py
tengine/misc/: keys.py
